# CrediTrack_FastAPI

./: alembic.ini  import_data.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 71508d043083_models_imported_to_env_py.py  fa1fc9789245_initial_clean_migration.py  fcb52f0c1ffc_target_metadata_upgraded.py
conf/: config.py  messages.py
data/: .~lock.plans_to_upload.xlsx#  credits.csv  dictionary.csv  payments.csv  plans.csv  plans_to_upload.xlsx  users.csv  users.xlsx
database/: db.py
src/creditrack/: models.py
src/models/: credit_model.py  dictionary_model.py  payment_model.py  plan_model.py  user_model.py
src/repositories/: credits_repository.py  dictionaries_repository.py  payments_repository.py  plans_repository.py  users_repository.py
src/routers/: credit_router.py  plan_router.py
src/schemas/: credits_schema.py  dictionary_schema.py  payments_schema.py  plans_schema.py  users_schema.py
src/services/: credit_service.py  healthchecker.py  plan_service.py
